# opticpp

./: .gitignore  CMakeLists.txt  force.cpp  force.h  force.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  polarization.cpp  polarization.h  polarization.ui  save.cpp  save.h  save.ui
optics/: optics.h  optics_gpu.cuh
